# lightpanda-py

./: .gitignore  README.md  hatch_build.py  pyproject.toml
.github/workflows/: publish.yml
scripts/: get-browser
src/lightpanda/: __init__.py
